2021-06-08  Rob Buis  <rbuis@igalia.com>

        CSSOM test for serializing counter() fails
        https://bugs.webkit.org/show_bug.cgi?id=184256

        Reviewed by Sam Weinig.

        Update improved test result.

        * web-platform-tests/css/cssom/serialize-values-expected.txt:

2021-06-08  Truitt Savell  <tsavell@apple.com>

        Unreviewed, reverting r278609.

        Broke builds with a linker error.

        Reverted changeset:

        "Update libwebrtc to M92"
        https://bugs.webkit.org/show_bug.cgi?id=226494
        https://commits.webkit.org/r278609

2021-06-08  Youenn Fablet  <youenn@apple.com>

        Update libwebrtc to M92
        https://bugs.webkit.org/show_bug.cgi?id=226494

        Reviewed by Eric Carlson.

        * web-platform-tests/webrtc/datachannel-emptystring-expected.txt:
        * web-platform-tests/webrtc/protocol/rtp-payloadtypes-expected.txt:
        * web-platform-tests/webrtc/protocol/unknown-mediatypes-expected.txt:
        * web-platform-tests/webrtc/receiver-track-live.https-expected.txt:

2021-06-07  Alexey Shvayka  <shvaikalesh@gmail.com>

        Unreviewed, reland r276592 with a fix for put() override in prototype chain of a JSProxy
        https://bugs.webkit.org/show_bug.cgi?id=226185

        * web-platform-tests/WebIDL/ecmascript-binding/global-object-implicit-this-value.any-expected.txt:
        * web-platform-tests/WebIDL/ecmascript-binding/interface-object-set-receiver-expected.txt: Added.
        * web-platform-tests/WebIDL/ecmascript-binding/interface-object-set-receiver.html: Added.
        * web-platform-tests/WebIDL/ecmascript-binding/interface-prototype-constructor-set-receiver-expected.txt:
        * web-platform-tests/WebIDL/ecmascript-binding/interface-prototype-constructor-set-receiver.html:

2021-06-07  Alexey Shvayka  <shvaikalesh@gmail.com>

        Window should behave like a legacy platform object without indexed setter
        https://bugs.webkit.org/show_bug.cgi?id=225894
