@@ -18,14 +18,14 @@ PASS Performance interface: existence and properties of interface prototype obje
 PASS Performance interface: existence and properties of interface prototype object's "constructor" property
 PASS Performance interface: existence and properties of interface prototype object's @@unscopables property
 PASS Performance interface: operation now()
-FAIL Performance interface: attribute timeOrigin assert_true: The prototype object must have a property "timeOrigin" expected true got false
+PASS Performance interface: attribute timeOrigin
 PASS Performance interface: operation toJSON()
 PASS Performance must be primary interface of performance
 PASS Stringification of performance
 PASS Performance interface: performance must inherit property "now()" with the proper type
-FAIL Performance interface: performance must inherit property "timeOrigin" with the proper type assert_inherits: property "timeOrigin" not found in prototype chain
+PASS Performance interface: performance must inherit property "timeOrigin" with the proper type
 PASS Performance interface: performance must inherit property "toJSON()" with the proper type
-FAIL Performance interface: default toJSON operation on performance assert_true: property "timeOrigin" should be present in the output of Performance.prototype.toJSON() expected true got false
+PASS Performance interface: default toJSON operation on performance
 PASS Window interface: existence and properties of interface object
 PASS WorkerGlobalScope interface: attribute performance
 PASS WorkerGlobalScope interface: self must inherit property "performance" with the proper type
