@@ -1,3 +1,3 @@
 
-FAIL timeOrigin and now() should be correctly ordered between window and worker assert_less_than: Document timeOrigin must be earlier than worker timeOrigin expected a number but got a "undefined"
+PASS timeOrigin and now() should be correctly ordered between window and worker
 
