@@ -38,7 +38,6 @@ typedef double DOMHighResTimeStamp;
     GenerateIsReachable=ImplScriptExecutionContext,
 ] interface Performance : EventTarget {
     DOMHighResTimeStamp now();
-    // FIXME: Implement 'timeOrigin' - https://webkit.org/b/174862
-    // readonly attribute DOMHighResTimeStamp timeOrigin;
+    readonly attribute DOMHighResTimeStamp timeOrigin;
     [Default] object toJSON();
 };
