@@ -1,3 +1,15 @@
+2021-06-09  Alex Christensen  <achristensen@webkit.org>
+
+        Performance API: Implement performance.timeOrigin
+        https://bugs.webkit.org/show_bug.cgi?id=174862
+
+        Reviewed by Ryosuke Niwa.
+
+        * page/Performance.cpp:
+        (WebCore::Performance::timeOrigin const):
+        * page/Performance.h:
+        * page/Performance.idl:
+
 2021-06-09  Simon Fraser  <simon.fraser@apple.com>
 
         Unreviewed Windows build fix.
